1.21.x: the FML 10 launch path works - the missing piece was the profile's JVM arguments